[package]
name = "oplog"
version = "0.3.0"
authors = ["Paul Mucur <mudge@mudge.name>"]
description = "Library for iterating over a MongoDB replica set oplog."
documentation = "http://mudge.name/oplog"
repository = "https://github.com/mudge/oplog"
readme = "README.md"
keywords = ["mongodb", "mongo", "oplog"]
license = "MIT"
edition = "2018"

[dependencies]
mongodb = "2.1.0"
chrono = "0.4"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
